--- a/package.json
+++ b/package.json
@@ -13,57 +13,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/pwa": "^0.5.3",
-    "@angular/router": "^18.0.0",
-    "@angular/service-worker": "^19.1.1",
-    "@capacitor/android": "^6.2.0",
-    "@capacitor/app": "6.0.2",
-    "@capacitor/core": "^6.2.0",
-    "@capacitor/haptics": "6.0.2",
-    "@capacitor/ios": "^6.2.0",
-    "@capacitor/keyboard": "6.0.3",
-    "@capacitor/status-bar": "6.0.2",
-    "@ionic/angular": "^8.0.0",
+    "@angular-devkit/architect": "^0.1703.11",
+    "@angular-devkit/core": "^18.2.12",
+    "@angular-devkit/schematics": "^18.2.12",
+    "@angular/animations": "^18.2.13",
+    "@angular/common": "^18.2.13",
+    "@angular/compiler": "^18.2.13",
+    "@angular/compiler-cli": "^18.2.13",
+    "@angular/core": "^18.2.13",
+    "@angular/forms": "^18.2.13",
+    "@angular/platform-browser": "^18.2.13",
+    "@angular/platform-browser-dynamic": "^18.2.13",
+    "@angular/router": "^18.2.13",
+    "@angular/service-worker": "^18.2.12",
+    "@capacitor/android": "^7.0.0",
+    "@capacitor/app": "7.0.0",
+    "@capacitor/core": "7.0.0",
+    "@capacitor/haptics": "7.0.0",
+    "@capacitor/ios": "^7.0.0",
+    "@capacitor/keyboard": "7.0.0",
+    "@capacitor/status-bar": "7.0.0",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/fingerprint-aio": "^5.36.0",
+    "@ionic/angular": "^8.4.1",
     "@ionic/storage-angular": "^4.0.0",
     "chart.js": "^4.4.7",
     "cordova-plugin-fingerprint-aio": "^6.0.0",
-    "ionicons": "^7.0.0",
-    "react-native-health": "^1.19.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "rxjs": "^7.8.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.0",
-    "@angular-eslint/builder": "^18.0.0",
-    "@angular-eslint/eslint-plugin": "^18.0.0",
-    "@angular-eslint/eslint-plugin-template": "^18.0.0",
-    "@angular-eslint/schematics": "^18.0.0",
-    "@angular-eslint/template-parser": "^18.0.0",
-    "@angular/compiler-cli": "^18.0.0",
-    "@angular/language-service": "^18.0.0",
-    "@capacitor/cli": "6.2.0",
-    "@ionic/angular-toolkit": "^11.0.1",
+    "@angular-devkit/build-angular": "^18.2.12",
+    "@angular-eslint/builder": "^14.0.0",
+    "@angular-eslint/eslint-plugin": "^14.0.0",
+    "@angular-eslint/eslint-plugin-template": "^14.0.0",
+    "@angular-eslint/schematics": "^14.0.0",
+    "@angular-eslint/template-parser": "^14.0.0",
+    "@capacitor/cli": "7.0.0",
+    "@ionic/angular-toolkit": "^6.1.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsdoc": "^48.2.1",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~5.1.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.0"
+    "typescript": "5.4"
   },
   "description": "An Ionic project"
 }
