--- a/package.json
+++ b/package.json
@@ -33,12 +33,16 @@
     "@capacitor/ios": "^7.0.0",
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
+    "@capacitor/storage": "^1.2.5",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/fingerprint-aio": "^5.36.0",
     "@ionic/angular": "^8.4.1",
     "@ionic/storage-angular": "^4.0.0",
+    "body-parser": "^1.20.3",
     "chart.js": "^4.4.7",
     "cordova-plugin-fingerprint-aio": "^6.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "rxjs": "^7.8.0",
     "zone.js": "^0.11.4"
   },
